<resources>
    <string name="app_name">ServiZone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_recents">Recents</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_testing">testing</string>
    <string name="userprofile">User\'s Profile</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>

    <string-array name="dummy_data">
        <item>BRICK LAYER</item>
        <item>DEVELOPER</item>
        <item>SURVEYOR</item>
        <item>MECHANIC</item>
        <item>ELECTRICIAN</item>
        <item>NANNY</item>
        <item>DRY-CLEANER</item>
        <item>DESIGNER</item>
        <item>MAKEUP-ARTIST</item>
        <item>DRIVER</item>
    </string-array>

    <string-array name="dummy_data2">
        <item>Mathew</item>
        <item>Kunle</item>
        <item>Bode</item>
        <item>Thomas</item>
        <item>Adejoke</item>
        <item>Adeboye</item>
        <item>Fasilat</item>
        <item>Kamoli</item>
        <item>Nicolas</item>
        <item>Richard</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_signin">Signin</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="create">Create a new account</string>
    <string name="forgot">Forgot Password ?</string>
    <string name="forgotinfo">We only need your registered email to send you password reset instructions.</string>
    <string name="title_activity_profile">Profile</string>

    <string name="title_activity_expert_results">ExpertResultsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="expert">I\'m an Expert</string>
    <string name="user">I\'m a User</string>

    <string-array name="profession">
        <item>Automobile</item>
        <item>Marine Engineeer</item>
        <item>Web Developer</item>
        <item>Software Engineer</item>
        <item>Mechanical Engineer</item>
        <item>Cook</item>
        <item>Driver</item>
        <item>Programmer</item>
        <item>Plumber</item>
        <item>Electrician</item>
    </string-array>

    <string name="title_activity_startpage">Startpage</string>
    <string name="continueapp">Continue</string>
    <string name="fincoapps">Powered By FincoApps</string>
    <string name="abouttheapp">Easy Hire Make Professionals Easy For You To Hire And Available For You At Anytime Possible \..\.
    Easy Hire Make Professionals Easy For You To Hire And Available For You At Anytime Possible \..\.
    Easy Hire Make Professionals Easy For You To Hire And Available For You At Anytime Possible \..\.</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="resetpassword">RESET PASSWORD</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="Changepass">CHANGE PASSWORD</string>
    <string name="title_activity_simmer">Simmer</string>

</resources>
