<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fincoapps.servizone.MainActivity">
    <item
        android:id="@+id/userprofile"
        android:orderInCategory="100"
        android:title="@string/userprofile"
        app:showAsAction="never" />
    <item
        android:id="@+id/history"
        android:orderInCategory="100"
        android:title="@string/history"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
