<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipChildren="false"
    tools:context="com.fincoapps.servizone.Signin">


    <include layout="@layout/footer"/>

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="-70dp"
        android:clipChildren="false"
        android:orientation="vertical">

        <com.fincoapps.servizone.utils.CurvedLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            app:circleBackgroundColor="#72C6FA"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="20dp"
            android:text="Sign up as an Expert"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="27dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/backbtn" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="140dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="8dp"
            app:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColor="#D6D4D5"
                android:textColorLink="#D6D4D5" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:theme="@style/TextLabel">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="#D6D4D5"
                android:textColorLink="#D6D4D5" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:elevation="10dp"
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:textColor="#fff"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/login"
            android:background="@drawable/roundlogin"/>

        <TextView
            android:id="@+id/forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot"
            android:textColor="#D6D4D5"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/link_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/create"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>



</RelativeLayout>
